# skills

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml  skill.html  styles.css  workflows.html
.claude/: settings.json
.resources/: index.html
.smithers/: agents.ts  package.json  smithers.config.ts
agent_ergonomics_audit/: README.md
docs/: README.md  authoring-guide.md  beads.md  concepts.md  eval-methodology.md  external-skill-bootstrap.md  gepa-optimization.md  getting-started.md  model-access-spike.md  smithers.md  trajectory-recovery-spike.md
evals/: README.md
harness/: llm.py
plans/: 001-app-shell-tokens-router.md  002-workflow-canvas-inspector.md  003-run-loop-table.md  004-improvement-queue-backend.md  005-skills-page-playground.md  006-runs-feed-scorecard.md  007-cmdk-background-generation.md  008-review-mode-absorbed.md  README.md
scripts/: check_eval_cases.py  check_schemas.py  check_skill_structure.py  check_validator_robustness.py  checklib.py  install_skill.py
skills/repo-map/evals/repo-map-python-uv-service/input/: README.md  pyproject.toml
skills/repo-map/evals/repo-map-python-uv-service/input/src/shortlinks/: __init__.py  main.py  store.py
skills/repo-map/evals/repo-map-python-uv-service/input/tests/: test_store.py
tests/: test_check_scripts_cli.py  test_check_scripts_json_contract.py  test_gen_eval_cases_cli_contract.py  test_harness_llm.py  test_run_eval_json_summary.py
ui/: README.md  app.js  bench-cli-contract.test.ts  bench-invalid-flags.test.ts  bench-unknown-help.test.ts  bench.mirror-routes.test.ts  bench.ts  generate.ts  (+8 more)
(+789 files in other folders)
